Closed
Bug 570566
Opened 15 years ago
Closed 15 years ago
Crash [@ nsTextControlFrame::SetInitialChildList] removing type from <input type=image>
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a5
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: jruderman, Assigned: ehsan.akhgari)
References
Details
(4 keywords)
Crash Data
Attachments
(3 files)
###!!! ASSERTION: Single line text controls need to have a state associated with them: 'mInputData.mState', file content/html/content/src/nsHTMLInputElement.cpp, line 581
Crash [@ nsTextControlFrame::SetInitialChildList]
I'm guessing this is a regression from bug 534785.
| Reporter | ||
Comment 1•15 years ago
|
||
Updated•15 years ago
|
blocking2.0: --- → ?
| Assignee | ||
Comment 2•15 years ago
|
||
The problem was that I did not initialize mInputData.mState when the type attribute was removed.
Comment 3•15 years ago
|
||
Comment on attachment 450014 [details] [diff] [review]
Patch (v1)
- In content/html/content/crashtests/570566-1.html:
+<body onload="document.getElementById('i').removeAttribute('type')"><input id=i type=image></body>
\ No newline at end of file
Add a newline at end of file?
r=jst
Attachment #450014 -
Flags: review?(jst) → review+
| Assignee | ||
Comment 4•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Updated•15 years ago
|
blocking2.0: ? → final+
Updated•14 years ago
|
Crash Signature: [@ nsTextControlFrame::SetInitialChildList]
You need to log in
before you can comment on or make changes to this bug.
Description
•