Bug 570566 - Crash [@ nsTextControlFrame::SetInitialChildList] removing type from <input type=image>; r=jst