content/html/content/src/nsHTMLInputElement.cpp
@@ -484,6 +484,11 @@ protected:
   void FreeData();
   nsTextEditorState *GetEditorState() const;
 
+  /**
+   * Manages the internal data storage across type changes.
+   */
+  void HandleTypeChange(PRUint8 aNewType);
+
   nsCOMPtr<nsIControllers> mControllers;
 
   /**
@@ -773,7 +778,7 @@ nsHTMLInputElement::AfterSetAttr(PRInt32 aNameSpaceID, nsIAtom* aName,
         // We're now a text input.  Note that we have to handle this manually,
         // since removing an attribute (which is what happened, since aValue is
         // null) doesn't call ParseAttribute.
-        mType = kInputDefaultType->value;
+        HandleTypeChange(kInputDefaultType->value);
       }
     
       // If we are changing type from File/Text/Tel/Passwd to other input types
@@ -2355,6 +2360,25 @@ nsHTMLInputElement::UnbindFromTree(PRBool aDeep, PRBool aNullParent)
   nsGenericHTMLFormElement::UnbindFromTree(aDeep, aNullParent);
 }
 
+void
+nsHTMLInputElement::HandleTypeChange(PRUint8 aNewType)
+{
+  // Only single line text inputs have a text editor state.
+  PRBool isNewTypeSingleLine =
+    IsSingleLineTextControlInternal(PR_FALSE, aNewType);
+  PRBool isCurrentTypeSingleLine =
+    IsSingleLineTextControl(PR_FALSE);
+  if (isNewTypeSingleLine && !isCurrentTypeSingleLine) {
+    FreeData();
+    mInputData.mState = new nsTextEditorState(this);
+    NS_ADDREF(mInputData.mState);
+  } else if (isCurrentTypeSingleLine && !isNewTypeSingleLine) {
+    FreeData();
+  }
+
+  mType = aNewType;
+}
+
 PRBool
 nsHTMLInputElement::ParseAttribute(PRInt32 aNamespaceID,
                                    nsIAtom* aAttribute,
@@ -2387,20 +2411,7 @@ nsHTMLInputElement::ParseAttribute(PRInt32 aNamespaceID,
           ClearFileNames();
         }
 
-        // Only single line text inputs have a text editor state.
-        PRBool isNewTypeSingleLine =
-          IsSingleLineTextControlInternal(PR_FALSE, newType);
-        PRBool isCurrentTypeSingleLine =
-          IsSingleLineTextControl(PR_FALSE);
-        if (isNewTypeSingleLine && !isCurrentTypeSingleLine) {
-          FreeData();
-          mInputData.mState = new nsTextEditorState(this);
-          NS_ADDREF(mInputData.mState);
-        } else if (isCurrentTypeSingleLine && !isNewTypeSingleLine) {
-          FreeData();
-        }
-
-        mType = newType;
+        HandleTypeChange(newType);
       }
 
       return success;
